DT-1613 fixes alignment of signup form button

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1133,6 +1133,7 @@ textarea {
         	border: 2px solid darken(@color-swatch2, 50%);
         	background-color: @color-swatch1;
         	border-radius: 0;
+            margin-left: 0;
         	 &:hover {
             	background-color: @color-swatch1;
             	border: 2px solid lighten(@color-swatch3, 5%);
